# vole_machine_GUI

./: CMakeLists.txt  CPU.cpp  CPU.h  CU.cpp  CU.h  helperFunctions.cpp  helperFunctions.h  machine.h  machinesimulator.cpp  machinesimulator.h  machinesimulator.ui  machinesimulator.ui.autosave  main.cpp  mainMemorey.cpp  mainMemorey.h  memoryUnit.cpp  memoryUnit.h  volemachine.cpp  volemachine.h
